src/widgets/kernel/qwidget.cpp
@@ -1700,7 +1700,11 @@ void QWidgetPrivate::deleteSysExtra()
 
 void QWidgetPrivate::deleteTLSysExtra()
 {
+    Q_Q(QWidget);
     if (extra && extra->topextra) {
+        if (extra->hasWindowContainer)
+            QWindowContainer::toplevelAboutToBeDestroyed(q);
+
         delete extra->topextra->window;
         extra->topextra->window = nullptr;
     }
